update formatter test and tutorial to use titanic dataset

--- a/tests/Report Render.ipynb
+++ b/tests/Report Render.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/i309943/.local/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
@@ -46,17 +37,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -93,7 +84,7 @@
        "      <td>7.2500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
-       "      <td>19600322</td>\n",
+       "      <td>19710817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -109,7 +100,7 @@
        "      <td>71.2833</td>\n",
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
-       "      <td>19600919</td>\n",
+       "      <td>19720114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -125,7 +116,7 @@
        "      <td>7.9250</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
-       "      <td>19690102</td>\n",
+       "      <td>19630815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -141,7 +132,7 @@
        "      <td>53.1000</td>\n",
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
-       "      <td>19750322</td>\n",
+       "      <td>19720815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -157,7 +148,7 @@
        "      <td>8.0500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
-       "      <td>19640714</td>\n",
+       "      <td>19730515</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -179,11 +170,11 @@
        "4                           Allen, Mr. William Henry    male  35.0      0   \n",
        "\n",
        "   Parch            Ticket     Fare Cabin Embarked  Birthday  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  19600322  \n",
-       "1      0          PC 17599  71.2833   C85        C  19600919  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  19690102  \n",
-       "3      0            113803  53.1000  C123        S  19750322  \n",
-       "4      0            373450   8.0500   NaN        S  19640714  "
+       "0      0         A/5 21171   7.2500   NaN        S  19710817  \n",
+       "1      0          PC 17599  71.2833   C85        C  19720114  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  19630815  \n",
+       "3      0            113803  53.1000  C123        S  19720815  \n",
+       "4      0            373450   8.0500   NaN        S  19730515  "
       ]
      },
      "execution_count": 3,
@@ -290,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +295,7 @@
       "[Examples]: ['A/5 21171', 'PC 17599', 'STON/O2. 3101282', '113803', '373450']\n",
       "\n",
       "Warning: the feature [Cabin] is suspected to be identifierable feature. \n",
-      "[Examples]: ['NAN', 'C85', 'NAN', 'C123', 'NAN']\n",
+      "[Examples]: [nan, 'C85', nan, 'C123', nan]\n",
       "\n",
       "['Pclass',\n",
       " 'Name',\n",
@@ -486,15 +477,13 @@
      "text": [
       "{'Age': 'numerical',\n",
       " 'Birthday': 'datetime',\n",
-      " 'Cabin': 'text',\n",
       " 'Embarked': 'categorical',\n",
       " 'Fare': 'numerical',\n",
       " 'Name': 'text',\n",
       " 'Parch': 'categorical',\n",
       " 'Pclass': 'categorical',\n",
       " 'Sex': 'categorical',\n",
-      " 'SibSp': 'categorical',\n",
-      " 'Ticket': 'text'}\n"
+      " 'SibSp': 'categorical'}\n"
      ]
     }
    ],
@@ -520,10 +509,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/envs/ml-mkt-training/lib/python3.6/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  after removing the cwd from sys.path.\n"
      ]
     },
@@ -535,9 +524,7 @@
       "Age\n",
       "SibSp\n",
       "Parch\n",
-      "Ticket\n",
       "Fare\n",
-      "Cabin\n",
       "Embarked\n",
       "Birthday\n"
      ]
@@ -624,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Text field distribution    \n",
+    "### Date Time field distribution    \n",
     "for field_name in feature['datetime']:\n",
     "    labelled_stats, all_stats = stats[field_name]\n",
     "    report.detail.add_datetime_field_distribution(field_name=field_name, field_distribution=labelled_stats)"
@@ -722,7 +709,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "report generated : /Users/i309943/workspace/Explainable_AI/tests/sample-report-final-with-summary.pdf\n"
+      "report generated : /Users/i062308/Development/Explainable_AI/tests/sample-report-final-with-summary.pdf\n"
      ]
     }
    ],
@@ -736,9 +723,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3(ml-mkt-training)",
+   "display_name": "Python [conda env:xai-py37] *",
    "language": "python",
-   "name": "ml-mkt-training"
+   "name": "conda-env-xai-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -750,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
