compiler tutorial - titanic 2

--- a/tutorials/compiler/titanic/sample.ipynb
+++ b/tutorials/compiler/titanic/sample.ipynb
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.5 ML train a LogisticRegression Model"
+    "#### 1.5 ML train a DecisionTreeClassifier Model"
    ]
   },
   {
@@ -492,7 +492,7 @@
     "\n",
     "sub = pd.DataFrame(pd.read_csv(\"test.csv\")['PassengerId'])\n",
     "sub['Survived'] = list(map(int, y_pred))\n",
-    "sub.to_csv(\"submission.csv\", index=False)"
+    "sub.to_csv(\"result.csv\", index=False)"
    ]
   },
   {
