clean-up titanic tutorial

--- a/tutorials/compiler/titanic/sample.ipynb
+++ b/tutorials/compiler/titanic/sample.ipynb
@@ -463,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Accuracy:  97.87\n"
+      "Model Accuracy:  97.98\n"
      ]
     }
    ],
@@ -515,6 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "sys.path.append('../../../')\n",
     "from xai.compiler.base import Configuration, Controller"
@@ -602,11 +603,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/titanic/titanic-basic-report.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"report generated : %s/titanic-basic-report.pdf\" % os.getcwd())"
+   ]
   }
  ],
  "metadata": {
