--- a/tutorials/compiler/titanic2/sample.ipynb
+++ b/tutorials/compiler/titanic2/sample.ipynb
@@ -477,6 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "sys.path.append('../../../')\n",
     "from xai.compiler.base import Configuration, Controller"
@@ -564,11 +565,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/titanic2/titanic-basic-report.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"report generated : %s/titanic-basic-report.pdf\" % os.getcwd())"
+   ]
   }
  ],
  "metadata": {
