--- a/tutorials/compiler/titanic2/sample.ipynb
+++ b/tutorials/compiler/titanic2/sample.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,11 +64,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "[     PassengerId  Survived  Pclass  \\\n",
+       "0              1         0       3   \n",
+       "1              2         1       1   \n",
+       "2              3         1       3   \n",
+       "3              4         1       1   \n",
+       "4              5         0       3   \n",
+       "..           ...       ...     ...   \n",
+       "886          887         0       2   \n",
+       "887          888         1       1   \n",
+       "888          889         0       3   \n",
+       "889          890         1       1   \n",
+       "890          891         0       3   \n",
+       "\n",
+       "                                                  Name     Sex   Age  SibSp  \\\n",
+       "0                              Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                               Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                             Allen, Mr. William Henry    male  35.0      0   \n",
+       "..                                                 ...     ...   ...    ...   \n",
+       "886                              Montvila, Rev. Juozas    male  27.0      0   \n",
+       "887                       Graham, Miss. Margaret Edith  female  19.0      0   \n",
+       "888           Johnston, Miss. Catherine Helen \"Carrie\"  female   NaN      1   \n",
+       "889                              Behr, Mr. Karl Howell    male  26.0      0   \n",
+       "890                                Dooley, Mr. Patrick    male  32.0      0   \n",
+       "\n",
+       "     Parch            Ticket     Fare Cabin Embarked  \n",
+       "0        0         A/5 21171   7.2500   NaN        S  \n",
+       "1        0          PC 17599  71.2833   C85        C  \n",
+       "2        0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3        0            113803  53.1000  C123        S  \n",
+       "4        0            373450   8.0500   NaN        S  \n",
+       "..     ...               ...      ...   ...      ...  \n",
+       "886      0            211536  13.0000   NaN        S  \n",
+       "887      0            112053  30.0000   B42        S  \n",
+       "888      2        W./C. 6607  23.4500   NaN        S  \n",
+       "889      0            111369  30.0000  C148        C  \n",
+       "890      0            370376   7.7500   NaN        Q  \n",
+       "\n",
+       "[891 rows x 12 columns],      PassengerId  Pclass                                          Name  \\\n",
+       "0            892       3                              Kelly, Mr. James   \n",
+       "1            893       3              Wilkes, Mrs. James (Ellen Needs)   \n",
+       "2            894       2                     Myles, Mr. Thomas Francis   \n",
+       "3            895       3                              Wirz, Mr. Albert   \n",
+       "4            896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)   \n",
+       "..           ...     ...                                           ...   \n",
+       "413         1305       3                            Spector, Mr. Woolf   \n",
+       "414         1306       1                  Oliva y Ocana, Dona. Fermina   \n",
+       "415         1307       3                  Saether, Mr. Simon Sivertsen   \n",
+       "416         1308       3                           Ware, Mr. Frederick   \n",
+       "417         1309       3                      Peter, Master. Michael J   \n",
+       "\n",
+       "        Sex   Age  SibSp  Parch              Ticket      Fare Cabin Embarked  \n",
+       "0      male  34.5      0      0              330911    7.8292   NaN        Q  \n",
+       "1    female  47.0      1      0              363272    7.0000   NaN        S  \n",
+       "2      male  62.0      0      0              240276    9.6875   NaN        Q  \n",
+       "3      male  27.0      0      0              315154    8.6625   NaN        S  \n",
+       "4    female  22.0      1      1             3101298   12.2875   NaN        S  \n",
+       "..      ...   ...    ...    ...                 ...       ...   ...      ...  \n",
+       "413    male   NaN      0      0           A.5. 3236    8.0500   NaN        S  \n",
+       "414  female  39.0      0      0            PC 17758  108.9000  C105        C  \n",
+       "415    male  38.5      0      0  SOTON/O.Q. 3101262    7.2500   NaN        S  \n",
+       "416    male   NaN      0      0              359309    8.0500   NaN        S  \n",
+       "417    male   NaN      1      1                2668   22.3583   NaN        C  \n",
+       "\n",
+       "[418 rows x 11 columns]]"
+      ],
       "text/plain": [
        "[     PassengerId  Survived  Pclass  \\\n",
        " 0              1         0       3   \n",
@@ -139,7 +207,7 @@
        " [418 rows x 11 columns]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +431,7 @@
        "4       3    1    2     1         0         1      1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,14 +484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Accuracy:  87.32\n"
+      "Model Accuracy:  87.43\n"
      ]
     }
    ],
@@ -431,7 +499,6 @@
     "model_pkl = open('model.pkl', 'rb')\n",
     "model = pickle.load(model_pkl)\n",
     "\n",
-    "X_test  = test_data.drop(\"PassengerId\", axis=1).copy()\n",
     "accuracy = round(model.score(X_train, Y_train) * 100, 2)\n",
     "print(\"Model Accuracy: \", accuracy)"
    ]
@@ -445,10 +512,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "X_test  = test_data.drop(\"PassengerId\", axis=1).copy()\n",
     "Y_pred = model.predict(X_test)\n",
     "result = pd.DataFrame({\n",
     "    \"PassengerId\":test_data[\"PassengerId\"],\n",
@@ -540,23 +608,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../../xai/data/helper.py:148: UserWarning: Warning: the feature [PassengerId] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:163: UserWarning: Warning: the feature [PassengerId] is suspected to be key feature as it is monotonic integer. \n",
       "[Examples]: [1, 2, 3, 4, 5]\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:148: UserWarning: Warning: the feature [Ticket] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:189: UserWarning: Warning: the feature [Ticket] is suspected to be identifiable feature. \n",
       "[Examples]: ['A/5 21171', 'PC 17599', 'STON/O2. 3101282', '113803', '373450']\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:148: UserWarning: Warning: the feature [Cabin] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:189: UserWarning: Warning: the feature [Cabin] is suspected to be identifiable feature. \n",
       "[Examples]: [nan, 'C85', nan, 'C123', nan]\n",
       "\n",
-      "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:227: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[column][data[column].isnull()] = 'NAN'\n"
+      "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n"
      ]
     }
    ],
