--- a/tutorials/explainer/lime_tabular_explainer.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer.ipynb
@@ -169,7 +169,7 @@
     "    training_labels=y_train,\n",
     "    mode=xai.MODE.CLASSIFICATION,\n",
     "    predict_fn=clf.predict_proba,\n",
-    "    column_names=raw_data['feature_names'],\n",
+    "    feature_names=raw_data['feature_names'],\n",
     "    class_names=list(raw_data['target_names'])\n",
     ")"
    ]
@@ -324,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
