--- a/tutorials/explainer/shap_tabular_explainer.ipynb
+++ b/tutorials/explainer/shap_tabular_explainer.ipynb
@@ -162,7 +162,7 @@
    "source": [
     "explainer.build_explainer(\n",
     "    predict_fn=clf.predict_proba,\n",
-    "    data=X_train,\n",
+    "    training_data=X_train,\n",
     "    feature_names=raw_data['feature_names']\n",
     ")"
    ]
@@ -201,11 +201,6 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88bf1c4723de4326b337712038c28066",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
        "HBox(children=(IntProgress(value=0, max=1), HTML(value='')))"
       ]
@@ -246,7 +241,7 @@
    "source": [
     "exp = explainer.explain_instance(\n",
     "    instance=X_test[0],\n",
-    "    nsamples=None,\n",
+    "    num_samples=None,\n",
     "    num_features=10\n",
     ")\n",
     "\n",
@@ -280,11 +275,6 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1885fc8133b4f1c831a2e4b16cc5208",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
        "HBox(children=(IntProgress(value=0, max=1), HTML(value='')))"
       ]
@@ -330,7 +320,7 @@
     "\n",
     "exp = new_explainer.explain_instance(\n",
     "    instance=X_test[0],\n",
-    "    nsamples=None,\n",
+    "    num_samples=None,\n",
     "    num_features=10\n",
     ")\n",
     "\n",
@@ -364,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
