update explainer compiler and update titanic2 notebook

--- a/tutorials/compiler/titanic2/sample.ipynb
+++ b/tutorials/compiler/titanic2/sample.ipynb
@@ -172,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
+      "/anaconda3/envs/ml-mkt-training/lib/python3.6/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
@@ -402,9 +402,15 @@
     "\n",
     "decision_tree = DecisionTreeClassifier()\n",
     "decision_tree.fit(X_train, Y_train)\n",
-    "pkl = open('model.pkl', 'wb')\n",
-    "pickle.dump(decision_tree, pkl)\n",
-    "decision_tree = None"
+    "\n",
+    "with open('model.pkl', 'wb') as pkl:\n",
+    "    pickle.dump(decision_tree, pkl)\n",
+    "\n",
+    "with open('func.pkl', 'wb') as func_pkl:\n",
+    "    pickle.dump(decision_tree.predict_proba,func_pkl)\n",
+    "\n",
+    "decision_tree = None\n",
+    "    "
    ]
   },
   {
@@ -423,13 +429,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Accuracy:  86.76\n"
+      "Model Accuracy:  86.87\n"
      ]
     }
    ],
    "source": [
-    "model_pkl = open('model.pkl', 'rb')\n",
-    "model = pickle.load(model_pkl)\n",
+    "with open('model.pkl', 'rb') as model_pkl:\n",
+    "    model = pickle.load(model_pkl)\n",
     "\n",
     "accuracy = round(model.score(X_train, Y_train) * 100, 2)\n",
     "print(\"Model Accuracy: \", accuracy)"
@@ -475,7 +481,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/i309943/.local/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -496,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_config = 'basic-report.json'"
+    "json_config = 'basic-report-explainer.json'"
    ]
   },
   {
@@ -515,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Report for Titanic Dataset', 'overview': True, 'content_table': True, 'contents': [{'title': 'Feature Importance Analysis', 'desc': 'This section provides the analysis on feature', 'sections': [{'title': 'Feature Importance Ranking', 'component': {'_comment': 'refer to document section xxxx', 'class': 'FeatureImportanceRanking', 'attr': {'trained_model': 'model.pkl', 'train_data': 'train_data.csv'}}}]}, {'title': 'Data Statistics Analysis', 'desc': 'This section provides the analysis on data', 'sections': [{'title': 'Simple Data Statistic', 'component': {'_comment': 'refer to document section xxxx', 'class': 'DataStatisticsAnalysis', 'attr': {'data': 'titanic.csv'}}}]}], 'writers': [{'class': 'Pdf', 'attr': {'name': 'titanic-basic-report'}}]}\n"
+      "{'name': 'Report for Titanic Dataset', 'overview': True, 'content_table': True, 'contents': [{'title': 'Feature Importance Analysis', 'desc': 'This section provides the analysis on feature', 'sections': [{'title': 'Feature Importance Ranking', 'component': {'_comment': 'refer to document section xxxx', 'class': 'FeatureImportanceRanking', 'attr': {'trained_model': 'model.pkl', 'train_data': 'train_data.csv'}}}]}, {'title': 'Data Statistics Analysis', 'desc': 'This section provides the analysis on data', 'sections': [{'title': 'Simple Data Statistic', 'component': {'_comment': 'refer to document section xxxx', 'class': 'DataStatisticsAnalysis', 'attr': {'data': 'titanic.csv', 'label': 'Survived'}}}]}, {'title': 'Model-Agnostic Explainer', 'desc': 'This section provides a model-agnostic explainer', 'sections': [{'title': 'Result', 'component': {'package': 'xai', 'module': 'compiler', 'class': 'ModelAgnosticExplainer', 'attr': {'predict_func': 'func.pkl', 'train_data': 'train_data.csv', 'feature_meta': 'feature_meta.json', 'method': 'lime', 'domain': 'tabular', 'num_features': 5}}}]}], 'writers': [{'class': 'Pdf', 'attr': {'name': 'titanic-basic-report'}}]}\n"
      ]
     }
    ],
@@ -540,18 +555,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../../xai/data/helper.py:163: UserWarning: Warning: the feature [PassengerId] is suspected to be key feature as it is monotonic integer. \n",
+      "../../../xai/data/helper.py:154: UserWarning: Warning: the feature [PassengerId] is suspected to be key feature as it is monotonic integer. \n",
       "[Examples]: [1, 2, 3, 4, 5]\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:189: UserWarning: Warning: the feature [Ticket] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:179: UserWarning: Warning: the feature [Ticket] is suspected to be identifiable feature. \n",
       "[Examples]: ['A/5 21171', 'PC 17599', 'STON/O2. 3101282', '113803', '373450']\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:189: UserWarning: Warning: the feature [Cabin] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:179: UserWarning: Warning: the feature [Cabin] is suspected to be identifiable feature. \n",
       "[Examples]: [nan, 'C85', nan, 'C123', nan]\n",
       "\n",
-      "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n"
+      "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
+      "/Users/i309943/.local/lib/python3.6/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
      ]
     }
    ],
@@ -582,7 +599,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/titanic2/titanic-basic-report.pdf\n"
+      "report generated : /Users/i309943/workspace/Explainable_AI/tutorials/compiler/titanic2/titanic-basic-report.pdf\n"
      ]
     }
    ],
@@ -592,17 +609,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "explainer generated : /Users/i309943/workspace/Explainable_AI/tutorials/compiler/titanic2/explainer.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"explainer generated : %s/explainer.pkl\" % os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference Explainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: {'confidence': 0.8571428571428571,\n",
+      "     'explanation': [{'feature': 'title=Mr', 'score': 0.39048620467037615},\n",
+      "                     {'feature': 'Pclass=3', 'score': 0.20049618514746245},\n",
+      "                     {'feature': 'is_alone=Yes', 'score': -0.08521981592668162},\n",
+      "                     {'feature': 'Age=between 32 and 48',\n",
+      "                      'score': 0.06153617959614501},\n",
+      "                     {'feature': 'Fare=lower than 7.91',\n",
+      "                      'score': 0.046918530531206384}]},\n",
+      " 1: {'confidence': 0.14285714285714285,\n",
+      "     'explanation': [{'feature': 'title=Mr', 'score': -0.39048620467037615},\n",
+      "                     {'feature': 'Pclass=3', 'score': -0.20049618514746245},\n",
+      "                     {'feature': 'is_alone=Yes', 'score': 0.08521981592668167},\n",
+      "                     {'feature': 'Age=between 32 and 48',\n",
+      "                      'score': -0.06153617959614501},\n",
+      "                     {'feature': 'Fare=lower than 7.91',\n",
+      "                      'score': -0.046918530531206384}]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xai\n",
+    "from xai.explainer.explainer_factory import ExplainerFactory\n",
+    "from pprint import pprint\n",
+    "\n",
+    "explainer = ExplainerFactory.get_explainer(domain=xai.DOMAIN.TABULAR, algorithm=xai.ALG.LIME)\n",
+    "explainer.load_explainer('explainer.pkl')\n",
+    "explanations = explainer.explain_instance(instance=X_test.values[0,:],num_features=5)\n",
+    "pprint(explanations)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xai-py37] *",
+   "display_name": "Python 3(ml-mkt-training)",
    "language": "python",
-   "name": "conda-env-xai-py37-py"
+   "name": "ml-mkt-training"
   },
   "language_info": {
    "codemirror_mode": {
@@ -614,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
