Added edits to documentation

--- a/tutorials/compiler/automobile/sample.ipynb
+++ b/tutorials/compiler/automobile/sample.ipynb
@@ -4,29 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Explainable Report with Automobile dataset using XAI\n",
+    "# Generate an Explainability Report with the Automobile dataset using XAI\n",
     "\n",
-    "This notebook demonstrates how to generate explanations report using complier implemented in the XAI library.\n",
-    "\n",
+    "This notebook demonstrates how to generate an explainability report using the XAI compiler.\n",
     "\n",
     "## Motivation\n",
-    "Once the PoC is done (and you know where your data comes from, what it looks like, and what it can predict) comes the ideal next step is to put your model into production and make it useful for the rest of the business.\n",
     "\n",
-    "Does it sound familiar? do you also need to answer the questions below, before promoting your model into production:\n",
-    "1. _How you sure that your model is ready for production?_\n",
-    "2. _How you able to explain the model performance? in business context that non-technical management can understand?_\n",
-    "3. _How you able to compare between newly trained models and existing models is done manually every iteration?_\n",
+    "When it comes to putting your machine learning model into production, one may need to consider the following:\n",
     "\n",
-    "In XAI project, our simply vision is to:\n",
-    "1. __Speed up data validation__\n",
-    "2. __Simplify model engineering__\n",
-    "3. __Build trust__  \n",
+    "1. _How can you compare newly trained models with previous versions?_\n",
+    "2. _How can you present your new model's results to non-technical users (e.g. managers, business developers) in an intuitive manner?_\n",
+    "3. _How can you establish trust between your machine learning model and its end-users?_\n",
+    "\n",
+    "\n",
+    "The XAI project attempts to address these questions by providing interpretability and explanations throughout the lifecycle of a ML solution, including:\n",
+    "1. The data itself, allowing for robust data validation and intuitive visualisations\n",
+    "2. The training/validation processes of model, allowing users to understand how well the model trained and which features were important\n",
+    "3. The predictions, allowing for users to understand why a model exhibited particular behavior\n",
     "  \n",
     "For more details, please refer to our [whitepaper](https://sap.sharepoint.com/sites/100454/ML_Apps/Shared%20Documents/Reusable%20Components/Explainability/XAI_Whitepaper.pdf?csf=1&e=phIUNN&cid=771297d7-d488-441a-8a65-dab0305c3f04)\n",
     "\n",
     "## Steps\n",
-    "1. Create a model to Predict price of automobile, using the data provide in [automobile](https://www.kaggle.com/toramky/automobile-dataset)\n",
-    "2. Evaluate the model performance with XAI report"
+    "1. Train a model on the [automobile](https://www.kaggle.com/toramky/automobile-dataset) dataset\n",
+    "2. Evaluate the model's performance with XAI report"
    ]
   },
   {
@@ -841,9 +841,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xai-py37] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-xai-py37-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -855,9 +855,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
