--- a/tests/Report Render.ipynb
+++ b/tests/Report Render.ipynb
@@ -723,9 +723,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xai-py37] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-xai-py37-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -737,9 +737,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
