Updated artifacts and tutorial

--- a/tutorials/explainer/lime_tabular_explainer.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer.ipynb
@@ -137,7 +137,7 @@
     "Here are some other optional parameters:\n",
     "* training_labels (list): Training labels, which can be used by the continuous feature\n",
     "    discretizer\n",
-    "* column_names (list): The names of the columns of the training data\n",
+    "* feature_names (list): The names of the columns of the training data\n",
     "* categorical_features (list): Integer list indicating the indices of categorical features\n",
     "* dict_categorical_mapping (dict): Mapping of integer index of categorical feature\n",
     "    (same as from categorical_features) to a list of values for that column.\n",
@@ -205,8 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: {'confidence': 0.0,\n",
-      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "{0: {'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
       "                      'score': -0.10193695487658752},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
       "                      'score': -0.09601666088375639},\n",
@@ -215,9 +214,9 @@
       "                     {'feature': 'mean area <= 419.25',\n",
       "                      'score': -0.056302517885391166},\n",
       "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': -0.05509499962470648}]},\n",
-      " 1: {'confidence': 1.0,\n",
-      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "                      'score': -0.05509499962470648}],\n",
+      "     'prediction': 0.0},\n",
+      " 1: {'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
       "                      'score': 0.10193695487658752},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
       "                      'score': 0.0960166608837564},\n",
@@ -226,7 +225,8 @@
       "                     {'feature': 'mean area <= 419.25',\n",
       "                      'score': 0.05630251788539119},\n",
       "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': 0.05509499962470641}]}}\n"
+      "                      'score': 0.05509499962470641}],\n",
+      "     'prediction': 1.0}}\n"
      ]
     }
    ],
@@ -268,8 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: {'confidence': 0.0,\n",
-      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "{0: {'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
       "                      'score': -0.09985606175737251},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
       "                      'score': -0.08623375147255567},\n",
@@ -278,9 +277,9 @@
       "                     {'feature': 'worst radius <= 12.93',\n",
       "                      'score': -0.06861610584095608},\n",
       "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': -0.05078617133441289}]},\n",
-      " 1: {'confidence': 1.0,\n",
-      "     'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
+      "                      'score': -0.05078617133441289}],\n",
+      "     'prediction': 0.0},\n",
+      " 1: {'explanation': [{'feature': 'worst perimeter <= 83.79',\n",
       "                      'score': 0.09985606175737251},\n",
       "                     {'feature': 'worst area <= 509.25',\n",
       "                      'score': 0.08623375147255567},\n",
@@ -289,7 +288,8 @@
       "                     {'feature': 'worst radius <= 12.93',\n",
       "                      'score': 0.0686161058409561},\n",
       "                     {'feature': 'worst texture <= 21.41',\n",
-      "                      'score': 0.05078617133441288}]}}\n"
+      "                      'score': 0.05078617133441288}],\n",
+      "     'prediction': 1.0}}\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
